keycloak-demo/postgresql-database.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
