keycloak-demo/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: "minikube-ca"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - keycloak.minikube
      secretName: keycloak.tls
  rules:
    - host: keycloak.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
